# irregular-loops

./: CMakeLists.txt  README.md
grafici/: advancedPlotter.py  chatGPTplot.py  csv_builder.py  data.csv  data2.csv  data_calculator.py  plotter.py  plotter3.py  results_summary.csv
results/: clang_O0_exec_auto_liveJournal_results.txt  clang_O0_exec_auto_orkut_results.txt  clang_O0_exec_auto_youtube_results.txt  clang_O0_exec_dynamic_liveJournal_results.txt  clang_O0_exec_dynamic_orkut_results.txt  clang_O0_exec_dynamic_youtube_results.txt  clang_O0_exec_guided_liveJournal_results.txt  clang_O0_exec_guided_orkut_results.txt  clang_O0_exec_guided_youtube_results.txt  clang_O0_exec_static_liveJournal_results.txt  clang_O0_exec_static_orkut_results.txt  clang_O0_exec_static_youtube_results.txt  clang_O1_exec_auto_liveJournal_results.txt  clang_O1_exec_auto_orkut_results.txt  clang_O1_exec_auto_youtube_results.txt  clang_O1_exec_dynamic_liveJournal_results.txt  clang_O1_exec_dynamic_orkut_results.txt  clang_O1_exec_dynamic_youtube_results.txt  clang_O1_exec_guided_liveJournal_results.txt  clang_O1_exec_guided_orkut_results.txt  clang_O1_exec_guided_youtube_results.txt  clang_O1_exec_static_liveJournal_results.txt  clang_O1_exec_static_orkut_results.txt  clang_O1_exec_static_youtube_results.txt  clang_O2_exec_auto_liveJournal_results.txt  clang_O2_exec_auto_orkut_results.txt  clang_O2_exec_auto_youtube_results.txt  clang_O2_exec_dynamic_liveJournal_results.txt  clang_O2_exec_dynamic_orkut_results.txt  clang_O2_exec_dynamic_youtube_results.txt  (+29 more)
src/: main.c
